# greenhouse-climate-3d

./: .gitignore  CMakeLists.txt  README.md
configs/: default_config.json
data/: weather_sample.csv  week_weather.csv
docs/: architecture.md  control_comparison.md  formulas.md  grid.md  humidity_ventilation.md  input_models.md  learning_analysis.md  live_control.md  optimization.md  setup.md  simulation_outputs.md  temperature_physics.md  terminal_view.md  user_guide.md
examples/: README.md
examples/asymmetric_12x6/: README.md  config.json
examples/control_comparison/: README.md  config.json
examples/large_terminal_view/: README.md  config.json  weather.csv
examples/spring_tomatoes/: README.md  config.json  weather.csv
include/: Comparison.h  Config.h  Controller.h  Devices.h  Exporter.h  Geometry.h  Material.h  Optimizer.h  Physics.h  Plant.h  Report.h  Simulator.h  TerminalView.h  Types.h  Weather.h
src/: Comparison.cpp  Config.cpp  Controller.cpp  Devices.cpp  Exporter.cpp  Geometry.cpp  Material.cpp  Optimizer.cpp  Physics.cpp  Plant.cpp  Report.cpp  Simulator.cpp  TerminalView.cpp  Weather.cpp  main.cpp
tests/: test_config.cpp  test_control_comparison.cpp  test_controller.cpp  test_devices.cpp  test_export_report.cpp  test_geometry.cpp  test_material.cpp  test_optimizer.cpp  test_physics.cpp  test_plants.cpp  test_simulator.cpp  test_weather.cpp
tools/: analyze_learning.py
